--- a/package.json
+++ b/package.json
@@ -3,16 +3,18 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "dev": "vite",
     "build": "run-p type-check build-only",
-    "preview": "vite preview",
     "test:unit": "vitest",
-    "build-only": "vite build",
-    "type-check": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false",
     "lint": "eslint this --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
-    "format": "prettier --write src"
+    "build-only": "vite build",
+    "dev": "vite",
+    "format": "prettier --write src",
+    "preview": "vite preview",
+    "type-check": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false"
   },
   "dependencies": {
+    "@quasar/extras": "^1.0.0",
+    "quasar": "^2.0.0",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
   },
@@ -31,9 +33,12 @@
     "jsdom": "^21.1.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.8.4",
+    "sass": "1.32.12",
+    "sass-loader": "^12.0.0",
     "typescript": "~4.8.4",
     "vite": "^4.1.4",
     "vitest": "^0.29.1",
+    "vue-cli-plugin-quasar": "~5.0.1",
     "vue-tsc": "^1.2.0"
   }
 }
