--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "quasar": "^2.0.0",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6",
+    "vue3-storage": "^0.1.11",
     "vuex": "^4.1.0"
   },
   "devDependencies": {
