--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -16,7 +16,7 @@
     "baseUrl": ".",
     "paths": {
       "@assets/*": ["./src/assets/*"],
-      "@*": ["./src*"]
+      "@*": ["./src/*"]
     },
   }
 }
