--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.0.0",
+    "@vuelidate/core": "^2.0.2",
+    "@vuelidate/validators": "^2.0.2",
     "axios": "^1.3.4",
     "quasar": "^2.0.0",
     "vue": "^3.2.47",
